Bug 1388338: Add ContextToLR on Darwin ARM to wasm signal handling; r=luke

And also fixes unused-warning error in none-codegen mode.

MozReview-Commit-ID: HPbm7n34gaS